--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,14 @@
             <version>4.1.13</version>
         </dependency>
 
+        <!-- HeadDatabase-API -->
+        <dependency>
+            <groupId>com.arcaniax</groupId>
+            <artifactId>HeadDatabase-API</artifactId>
+            <version>1.3.1</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.alpsbte.alpslib</groupId>
             <artifactId>alpslib-utils</artifactId>
