--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>li.cinnazeyy</groupId>
     <artifactId>LangLibs</artifactId>
-    <version>1.1</version>
+    <version>1.3</version>
     <packaging>jar</packaging>
 
     <name>LangLibs</name>
@@ -79,7 +79,7 @@
         <dependency>
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
-            <version>1.20.1-R0.1-SNAPSHOT</version>
+            <version>1.20.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
@@ -112,6 +112,7 @@
             <groupId>com.github.hamza-cskn.obliviate-invs</groupId>
             <artifactId>core</artifactId>
             <version>4.1.13</version>
+            <scope>compile</scope>
         </dependency>
 
         <!-- HeadDatabase-API -->
@@ -125,7 +126,7 @@
         <dependency>
             <groupId>com.alpsbte.alpslib</groupId>
             <artifactId>alpslib-utils</artifactId>
-            <version>1.0.13</version>
+            <version>1.1.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
