--- a/src/main/resources/languages.yml
+++ b/src/main/resources/languages.yml
@@ -38,11 +38,11 @@ zh_TW:
   region: "台灣"
   headId: "11627"
   itemModel: "item_flag_tw"
-custom_1:
-  name: ""
-  region: ""
-  headId: ""
-  itemModel: ""
+he_IL:
+  name: "עברית"
+  region: "ישראל"
+  headId: "13994"
+  itemModel: "item_flag_IL"
 custom_2:
   name: ""
   region: ""
