--- a/langlibs-api/src/main/resources/languages.yml
+++ b/langlibs-api/src/main/resources/languages.yml
@@ -38,6 +38,11 @@ zh_TW:
   region: "台灣"
   headId: "11627"
   itemModel: "item_flag_tw"
+he_IL:
+  name: "עברית"
+  region: "ישראל"
+  headId: "13994"
+  itemModel: "item_flag_IL"
 custom_1:
   name: ""
   region: ""
