fix invalid config path in configUtil

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <name>LangLibs</name>
 
-    <description>A universal language library for localisation</description>
+    <description>A minecraft language library for localisation</description>
 
     <modules>
         <module>langlibs-api</module>
