--- a/langlibs-paper/src/main/resources/paper-plugin.yml
+++ b/langlibs-paper/src/main/resources/paper-plugin.yml
@@ -1,5 +1,5 @@
 name: LangLibs
-version: '${project.version}'
+version: '1.5'
 main: li.cinnazeyy.langlibs.LangLibs
 api-version: '1.21'
 authors: [Cinnazeyy, R3tuxn]
