--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -26,7 +26,7 @@ jobs:
       run: mvn clean install -B
 
     - name: Deploy LangLibs-API to Maven repository
-      run: mvn deploy -pl langlibs-api -am -B -s .github/maven-settings.xml
+      run: mvn deploy -pl langlibs-api -B -s .github/maven-settings.xml
       env:
         MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
