add name and packaging type to langui pom.xml

--- a/langui-paper/pom.xml
+++ b/langui-paper/pom.xml
@@ -9,7 +9,10 @@
         <version>1.5</version>
     </parent>
 
-    <artifactId>langui-paper</artifactId>
+    <name>LangUI-Paper</name>
+    <artifactId>LangUI-Paper</artifactId>
+    <packaging>jar</packaging>
+    <description>A user interface plugin for LangLibs</description>
 
     <repositories>
         <repository>
