--- a/langlibs-api/pom.xml
+++ b/langlibs-api/pom.xml
@@ -4,27 +4,25 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>li.cinnazeyy</groupId>
-        <artifactId>LangLibs</artifactId>
-        <version>1.5.1</version>
-    </parent>
-
+    <groupId>li.cinnazeyy</groupId>
+    <version>1.5.1</version>
+    <artifactId>LangLibs-API</artifactId>
     <name>LangLibs-API</name>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.14.0</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-    <artifactId>LangLibs-API</artifactId>
 
     <repositories>
         <!-- Alps Repo -->
@@ -56,7 +54,7 @@
         <dependency>
             <groupId>org.mariadb.jdbc</groupId>
             <artifactId>mariadb-java-client</artifactId>
-            <version>2.7.4</version>
+            <version>3.5.3</version>
             <scope>compile</scope>
         </dependency>
 
@@ -64,7 +62,7 @@
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
-            <version>4.0.3</version>
+            <version>6.3.0</version>
             <scope>compile</scope>
         </dependency>
 
@@ -72,8 +70,8 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.14.0</version>
-            <scope>compile</scope>
+            <version>2.17.0</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Configurate -->
@@ -86,12 +84,13 @@
 
     <distributionManagement>
         <repository>
-            <id>lang-libs</id>
-            <url>https://mvn.alps-bte.com/repository/lang-libs/</url>
+            <id>alpsbte-repo</id>
+            <url>https://mvn.alps-bte.com/repository/alps-bte/</url>
         </repository>
     </distributionManagement>
 
     <properties>
+        <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
