--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -5,8 +5,9 @@ on:
   push:
     branches: [ master ]
     paths:
-      - 'langlibs-api/**'
-      - '.github/workflows/deploy-api.yml'
+      - 'langlibs-api/build.gradle.kts'
+    # - 'langlibs-api/**'
+    # - '.github/workflows/deploy-api.yml'
 
 jobs:
   build-and-deploy:
@@ -14,20 +15,23 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up JDK
       uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
         java-version: '21'
-        cache: 'maven'
+        cache: 'gradle'
 
-    - name: Build project
-      run: mvn clean install -B
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v4
+
+    - name: Build with Gradle
+      run: ./gradlew :alpslib-npc:build
 
     - name: Deploy LangLibs-API to Maven repository
-      run: mvn deploy -pl langlibs-api -B -s .github/maven-settings.xml
+      run: ./gradlew :alpslib-npc:publish
       env:
-        MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
-        MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+        ORG_GRADLE_PROJECT_alpsMavenUser: ${{ secrets.MAVEN_USERNAME }}
+        ORG_GRADLE_PROJECT_alpsMavenPassword: ${{ secrets.MAVEN_PASSWORD }}
