--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -28,10 +28,10 @@ jobs:
       uses: gradle/actions/setup-gradle@v4
 
     - name: Build with Gradle
-      run: ./gradlew :alpslib-npc:build
+      run: ./gradlew :LangLibs-API:build
 
     - name: Deploy LangLibs-API to Maven repository
-      run: ./gradlew :alpslib-npc:publish
+      run: ./gradlew :LangLibs-API:publish
       env:
         ORG_GRADLE_PROJECT_alpsMavenUser: ${{ secrets.MAVEN_USERNAME }}
         ORG_GRADLE_PROJECT_alpsMavenPassword: ${{ secrets.MAVEN_PASSWORD }}
