--- a/langlibs-api/src/main/resources/config.yml
+++ b/langlibs-api/src/main/resources/config.yml
@@ -1,8 +1,8 @@
 database:
-  url: ""
-  name: ""
-  username: ""
-  password: ""
+  url: "jdbc:mariadb://localhost:3306/"
+  name: "LangLibs"
+  username: "LangLibs"
+  password: "LangLibsPW"
 
 # NOTE: Do not change
 version: 1
