--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,13 +2,15 @@
 # https://docs.gradle.org/current/userguide/platforms.html#sub::toml-dependencies-format
 
 [versions]
-com-alpsbte-alpslib-alpslib-utils = "1.3.5"
-com-alpsbte-canvas = "1.3"
-com-zaxxer-hikaricp = "6.3.0"
+com-alpsbte-alpslib-alpslib-utils = "1.4.1" # https://mvn.alps-bte.com/service/rest/repository/browse/alps-bte/com/alpsbte/alpslib/alpslib-utils/
+com-alpsbte-canvas = "1.3" # https://mvn.alps-bte.com/service/rest/repository/browse/alps-bte/com/alpsbte/canvas/
+com-zaxxer-hikaricp = "6.3.3" # https://github.com/brettwooldridge/HikariCP/tags
 commons-io-commons-io = "2.17.0" # Provided by Minecraft (Libs folder)
-io-papermc-paper-paper-api = "1.21.4-R0.1-SNAPSHOT"
-org-mariadb-jdbc-mariadb-java-client = "3.5.3"
-org-spongepowered-configurate-yaml = "4.2.0"
+io-papermc-paper-paper-api = "1.21.10-R0.1-SNAPSHOT" # https://artifactory.papermc.io/ui/native/universe/io/papermc/paper/paper-api/
+org-mariadb-jdbc-mariadb-java-client = "3.5.7" # https://central.sonatype.com/artifact/org.mariadb.jdbc/mariadb-java-client
+org-spongepowered-configurate-yaml = "4.2.0" # https://github.com/SpongePowered/Configurate/releases
+git-version = "4.3.0" # https://github.com/palantir/gradle-git-version/releases
+shadow = "9.3.1" # https://github.com/GradleUp/shadow/releases
 
 [libraries]
 com-alpsbte-alpslib-alpslib-utils = { module = "com.alpsbte.alpslib:alpslib-utils", version.ref = "com-alpsbte-alpslib-alpslib-utils" }
@@ -20,5 +22,5 @@ org-mariadb-jdbc-mariadb-java-client = { module = "org.mariadb.jdbc:mariadb-java
 org-spongepowered-configurate-yaml = { module = "org.spongepowered:configurate-yaml", version.ref = "org-spongepowered-configurate-yaml" }
 
 [plugins]
-palantir-git-version = { id = "com.palantir.git-version", version = "4.0.0" }
-gradleup-shadow      = { id = "com.gradleup.shadow",    version = "9.0.0-rc1" }
+palantir-git-version = { id = "com.palantir.git-version", version.ref = "git-version" }
+gradleup-shadow = { id = "com.gradleup.shadow", version.ref = "shadow" }
