feat: Add new languages (da, es, hu, it, nl, ro)
With help from:
https://simplelocalize.io/data/locale-code/hu-HU/
https://minecraft-heads.com/custom-heads/head/21899-romania

--- a/langlibs-api/src/main/resources/languages.yml
+++ b/langlibs-api/src/main/resources/languages.yml
@@ -43,6 +43,36 @@ he_IL:
   region: "ישראל"
   headId: "13994"
   itemModel: "item_flag_IL"
+da_DK:
+  name: "Dansk"
+  region: "Danmark"
+  headId: "4411"
+  itemModel: "item_flag_dk"
+es_ES:
+  name: "Español"
+  region: "España"
+  headId: "23236"
+  itemModel: "item_flag_es"
+hu_HU:
+  name: "Magyar"
+  region: "Magyarország"
+  headId: "4284"
+  itemModel: "item_flag_hu"
+it_IT:
+  name: "Italiano"
+  region: "Italia"
+  headId: "21903"
+  itemModel: "item_flag_it"
+nl_NL:
+  name: "Nederlands"
+  region: "Nederland"
+  headId: "17422"
+  itemModel: "item_flag_nl"
+ro_RO:
+  name: "Română"
+  region: "România"
+  headId: "21899"
+  itemModel: "item_flag_ro"
 custom_1:
   name: ""
   region: ""
