--- a/langlibs-api/src/main/resources/config.yml
+++ b/langlibs-api/src/main/resources/config.yml
@@ -1,8 +1,12 @@
 database:
   url: "jdbc:mariadb://localhost:3306/"
-  name: "LangLibs"
+  dbName: "LangLibs"
   username: "LangLibs"
   password: "LangLibsPW"
+  maxLifetime: 1800000 # 30 minutes
+  connectionTimeout: 30000 # 30 seconds
+  keepaliveTime: 120000 # 2 minutes
+  maximumPoolSize: 10 # Maximum number of connections in the pool
 
 # NOTE: Do not change
-version: 1
+version: 2
